# ifj24-project

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  flattener.sh  rozdeleni  rozsireni
doc/: csplainnat.bst  dokumentace.bib  dokumentace.tex  makefile
src/: main.c
src/parser/: parser.c  parser.h
src/scanner/: README.md  scan_state.c  scan_state.h  scanner.c  scanner.h  scanner.plantuml
src/utils/: codegen.c  codegen.h  dll.c  dll.h  dymString.c  dymString.h  dynamic_array.c  dynamic_array.h  errors.c  errors.h  expresion.c  expresion.h  expression.c  expression.h  hashtable.c  hashtable.h  instructions.c  instructions.h  keywords.c  keywords.h  lexeme.c  lexeme.h  memory_table.c  memory_table.h  sll.c  sll.h  stack.c  stack.h  str.c  str.h  symDLList.c  symDLList.h  symtable.c  symtable.h  token.c  token.h  token_dll.c  token_dll.h  token_types.c  token_types.h
test/codegen/: assign.zig  big.zig  big2.zig  big3.zig  big_funexp.zig  big_strings.zig  booleans.zig  break.zig  builtin.zig  builtin2.zig  checkers.zig  conditions.zig  const_assignment.zig  continue.zig  diacritics.zig  double_id.zig  error_at.zig  error_expression.zig  error_float.zig  error_float2.zig  error_multiline.zig  error_multiline2.zig  error_multiline3.zig  error_prolog.zig  error_prolog2.zig  error_return.zig  error_return2.zig  error_string.zig  error_string2.zig  error_u8.zig  expressions.zig  expressions2.zig  factorial_iter.zig  factorial_rec.zig  fn_less_par.zig  fn_more_par.zig  funcs.zig  ic24int  ifj.write.zig  ifj24.zig  (+25 more)
test/dll/: DLL_test_1.c  DLL_test_2.c  DLL_test_3.c  DLL_test_4.c  DLL_trad_test_0.c
test/hashtable/: test_hash_0.c  test_hash_1.c  test_hash_2.c  test_memory_table.c
test/integration/: integration_tests_valgrind.sh
test/integration/test_inputs/integration/: test_103_0.zig  test_104_0.zig  test_105_0.zig  test_106_0.zig  test_107_0.zig  test_108_0.zig  test_109_0.zig  test_110_0.zig  test_112_0.zig  test_113_0.zig  test_114_0.zig  test_115_0.zig  test_116_0.zig  test_117_0.zig  test_118_0.zig  test_119_0.zig  test_120_2.zig  test_121_0.zig  test_122_0.zig  test_123_0.zig  test_124_0.zig  test_125_2.zig  test_126_0.zig  test_127_0.zig  test_128_0.zig  test_129_2.zig  test_130_0.zig  test_131_0.zig  test_132_0.zig  test_133_0.zig  test_134_2.zig  test_135_0.zig  test_136_0.zig  test_137_7.zig  test_138_0.zig  test_139_2.zig  test_140_0.zig  test_141_0.zig  test_142_0.zig  test_143_0.zig  (+193 more)
test/scanner/: constructions.zig  scan_1.c  scan_2.c  scan_3.c  scan_4.c  test0.zig  test1.zig  test10.zig  test2.zig  test3.zig  test4.zig  test5.zig  test6.zig  test7.zig  test8.zig  test9.zig  test_com_str.zig
test/scanner/atomic_expressions/: float.test  float.txt  float_bad.test  float_bad.txt  full.test  full.txt  function.txt  ints.test  ints.txt  keywords.test  keywords.txt  multilines.txt  strings.test  strings.txt  strings_bad.test  strings_bad.txt
test/sll/: SLL_test_1.c
